[tool.poetry]
name = "pluploader"
version = "0.8.0"
description = "CLI Confluence/Jira Plugin uploader"
authors = ["Fabian Siegel <fabian@livelyapps.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/livelyapps/pluploader"
repository = "https://github.com/livelyapps/pluploader"
packages = [
    { include = "pluploader" },
]

[tool.poetry.scripts]
pluploader = 'pluploader.main:main'

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
colorama = "^0.4.3"
configargparse = "^1.2.3"
furl = "^2.1.0"
PyYAML = "^5.3.1"
packaging = "^20.4"
importlib-metadata = "^1.7.0"
dataclasses = {version=">=0.7,<0.9", python = "~3.6"}
typer = "^0.3.2"
click_default_group = "^1.2.2"
beautifulsoup4 = "^4.9.3"
pydantic = "^1.6.1"
lxml = "^4.5.2"
html5lib = "^1.1"
rich = "^9.5.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pre-commit = "*"
flake8 = "^3.8.4"
jedi = "^0.17.2"
isort = "^5.5.4"
rope = "^0.17.0"
bpython = "^0.20"
debugpy = "^1.1.0"

[tool.black]
line-length = 127
target_version = ['py36']
include = '\.pyi?$'

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"

